--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
     implementation 'com.tbuonomo:dotsindicator:4.2'
+
+    implementation 'com.daimajia.androidanimations:library:2.4@aar'
 }
